# par-tar

./: .gitlab-ci.yml  Cargo.toml
.github/workflows/: binaries.yml
src/: main.rs
