[package]
name = "par-tar"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std", "cargo"] }
crossbeam-channel = "0.5"
glob = "0.3"
rayon = "1.5"
tar = "0.4"
zstd = { version = "0.10", default-features = false, features = ["zstdmt", "thin"] }

[profile.release]
lto = "thin"
strip = "debuginfo"
